--- a/assets/css/patterns/hero-page.css
+++ b/assets/css/patterns/hero-page.css
@@ -8,15 +8,11 @@
 }
 
 .gm-hero-page > div:first-child figure {
-  @apply overflow-hidden;
-}
-
-.gm-hero-page > div:first-child figure {
-  @apply flex w-5/6 h-full md:w-full max-h-[30vh] md:max-h-[35vh] lg:max-h-[50vh];
+  @apply flex w-5/6 h-full md:w-full max-h-[30vh] md:max-h-[35vh] lg:max-h-[50vh] overflow-hidden after:content-[''] after:bg-white/40 after:inset-0 after:absolute relative;
 }
 
 .gm-hero-page > div:first-child figure img {
-  @apply object-cover w-full lg:object-center;
+  @apply object-cover w-full lg:object-top;
 }
 /** column right */
 .gm-hero-page > div:last-child {
